vendor/vec.h

// vector of 32-bit intergers (added for 64-bit portability)
struct veci_t {
    int    size;
    int    cap;
    int*   ptr;
};
typedef struct veci_t veci;
void veci_new (veci* v);
void   veci_delete (veci* v);
 int*   veci_begin  (veci* v);
 int    veci_size   (veci* v);
 int*   veci_last   (veci* v);
 
 void   veci_resize (veci* v, int k);
 void   veci_push   (veci* v, int e);
 int    veci_get    (veci* v, int index);
// vector of 32- or 64-bit pointers
struct vecp_t {
    int    size;
    int    cap;
    void** ptr;
};
typedef struct vecp_t vecp;
void vecp_new (vecp* v);
 void   vecp_delete (vecp* v);
 void** vecp_begin  (vecp* v);
 int    vecp_size   (vecp* v);
 
 void   vecp_resize (vecp* v, int   k); // only safe to shrink !!
 void   vecp_push   (vecp* v, void* e);
 veci* vecp_get_veci (vecp* v, int index);