vendor/solver.h

//=================================================================================================
// Simple types:

// does not work for c++
typedef int  bool;
typedef int                lit;
typedef char               lbool;
typedef signed __int64     uint64;   // compatible with MS VS 6.0
typedef unsigned long long uint64;
struct solver_t;
typedef struct solver_t solver;
extern solver* solver_new(void);
extern void    solver_delete(solver* s);
extern bool    solver_addclause(solver* s, lit* begin, lit* end);
extern bool    solver_simplify(solver* s);
extern bool    solver_solve(solver* s, lit* begin, lit* end);
extern int     solver_nvars(solver* s);
extern int     solver_nclauses(solver* s);
extern int     solver_nconflicts(solver* s);
extern void    solver_setnvars(solver* s,int n);
extern void    solver_set_output_and_start(solver* s, const char* outfile);
extern void    solver_set_cnst_output_and_start(solver* s);
extern void    solver_set_start(solver* s);
extern double  solver_get_time_elapsed(solver* s);
extern void    solver_clear_assumptions(solver* s);
struct stats_t
{
    uint64   starts, decisions, propagations, inspects, conflicts;
    uint64   clauses, clauses_literals, learnts, learnts_literals, max_literals, tot_literals;
#ifdef GMP
    mpz_t    tot_solutions;
#else
    uint64   tot_solutions;
#endif

    clock_t     clk;

};
typedef struct stats_t stats;
//=================================================================================================
// Solver representation:

struct clause_t;
typedef struct clause_t clause;
struct solver_t
{
    int      size;          // nof variables
    int      cap;           // size of varmaps
    int      qhead;         // Head index of queue.
    int      qtail;         // Tail index of queue.

#ifdef FIXEDORDER
    int         nextvar;    // variable to be considered next
#endif

    int      lim;           // backtrack level limit

    // clauses
    vecp     clauses;       // List of problem constraints. (contains: clause*)
    vecp     learnts;       // List of learnt clauses. (contains: clause*)

    // solutions
    vecp     solutions;

    // activities
    double   var_inc;       // Amount to bump next variable with.
    double   var_decay;     // INVERSE decay factor for variable activity: stores 1/decay. 
    float    cla_inc;       // Amount to bump next clause with.
    float    cla_decay;     // INVERSE decay factor for clause activity: stores 1/decay.

    vecp*    wlists;        // 
    double*  activity;      // A heuristic measurement of the activity of a variable.
    lbool*   assigns;       // Current values of variables.
    int*     orderpos;      // Index in variable order.
    clause** reasons;       //
    int*     levels;        //
    lit*     trail;

    FILE*    out;           //
    int*     sublevels;     // decision sublevels
    veci     subtrail_lim;  // Separator indices for different decision sublevels in 'trail'. (contains: int)
    vecp     generated_clauses;  // generated clauses stack for nonchronological backtracking when subspace is exhausted.


    clause*  binary;        // A temporary binary clause
    lbool*   tags;          //
    veci     tagged;        // (contains: var)
    veci     stack;         // (contains: var)

    veci     order;         // Variable order. (heap) (contains: var)
    veci     trail_lim;     // Separator indices for different decision levels in 'trail'. (contains: int)

    int      root_level;    // Level of first proper decision.
    int      simpdb_assigns;// Number of top-level assignments at last 'simplifyDB()'.
    int      simpdb_props;  // Number of propagations before next 'simplifyDB()'.
    double   random_seed;
    double   progress_estimate;
    int      verbosity;     // Verbosity level. 0=silent, 1=some progress report, 2=everything
    int      is_k_sols;
    unsigned long      k_sols;

    stats    stats;
    int      native_pass_flag;
    veci     native_solution;
    veci     assumptions;
};