src/nbc_bindings.rs

#[test]
fn bindgen_test_layout_veci_t() {
    assert_eq!(
        ::std::mem::size_of::<veci_t>(),
        16usize,
        concat!("Size of: ", stringify!(veci_t))
    );
    assert_eq!(
        ::std::mem::align_of::<veci_t>(),
        8usize,
        concat!("Alignment of ", stringify!(veci_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<veci_t>())).size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(veci_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<veci_t>())).cap as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(veci_t),
            "::",
            stringify!(cap)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<veci_t>())).ptr as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(veci_t),
            "::",
            stringify!(ptr)
        )
    );
}
pub type veci = veci_t;
extern "C" {
    pub fn veci_new(v: *mut veci);
}
extern "C" {
    pub fn veci_delete(v: *mut veci);
}
extern "C" {
    pub fn veci_begin(v: *mut veci) -> *mut ::std::os::raw::c_int;
}
extern "C" {
    pub fn veci_size(v: *mut veci) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn veci_last(v: *mut veci) -> *mut ::std::os::raw::c_int;
}
extern "C" {
    pub fn veci_resize(v: *mut veci, k: ::std::os::raw::c_int);
}
extern "C" {
    pub fn veci_push(v: *mut veci, e: ::std::os::raw::c_int);
}
extern "C" {
    pub fn veci_get(v: *mut veci, index: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vecp_t {
    pub size: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
    pub ptr: *mut *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_vecp_t() {
    assert_eq!(
        ::std::mem::size_of::<vecp_t>(),
        16usize,
        concat!("Size of: ", stringify!(vecp_t))
    );
    assert_eq!(
        ::std::mem::align_of::<vecp_t>(),
        8usize,
        concat!("Alignment of ", stringify!(vecp_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vecp_t>())).size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vecp_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vecp_t>())).cap as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(vecp_t),
            "::",
            stringify!(cap)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vecp_t>())).ptr as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vecp_t),
            "::",
            stringify!(ptr)
        )
    );
}
pub type vecp = vecp_t;
extern "C" {
    pub fn vecp_new(v: *mut vecp);
}
extern "C" {
    pub fn vecp_delete(v: *mut vecp);
}
extern "C" {
    pub fn vecp_begin(v: *mut vecp) -> *mut *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn vecp_size(v: *mut vecp) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn vecp_resize(v: *mut vecp, k: ::std::os::raw::c_int);
}
extern "C" {
    pub fn vecp_push(v: *mut vecp, e: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn vecp_get_veci(v: *mut vecp, index: ::std::os::raw::c_int) -> *mut veci;
}
pub type bool_ = ::std::os::raw::c_int;
pub type lit = ::std::os::raw::c_int;
pub type lbool = ::std::os::raw::c_char;
pub type uint64 = ::std::os::raw::c_ulonglong;
pub type solver = solver_t;
extern "C" {
    pub fn solver_new() -> *mut solver;
}
extern "C" {
    pub fn solver_delete(s: *mut solver);
}
extern "C" {
    pub fn solver_addclause(s: *mut solver, begin: *mut lit, end: *mut lit) -> bool_;
}
extern "C" {
    pub fn solver_simplify(s: *mut solver) -> bool_;
}
extern "C" {
    pub fn solver_solve(s: *mut solver, begin: *mut lit, end: *mut lit) -> bool_;
}
extern "C" {
    pub fn solver_nvars(s: *mut solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn solver_nclauses(s: *mut solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn solver_nconflicts(s: *mut solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn solver_setnvars(s: *mut solver, n: ::std::os::raw::c_int);
}
extern "C" {
    pub fn solver_set_output_and_start(s: *mut solver, outfile: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn solver_set_cnst_output_and_start(s: *mut solver);
}
extern "C" {
    pub fn solver_set_start(s: *mut solver);
}
extern "C" {
    pub fn solver_get_time_elapsed(s: *mut solver) -> f64;
}
extern "C" {
    pub fn solver_clear_assumptions(s: *mut solver);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stats_t {
    pub starts: uint64,
    pub decisions: uint64,
    pub propagations: uint64,
    pub inspects: uint64,
    pub conflicts: uint64,
    pub clauses: uint64,
    pub clauses_literals: uint64,
    pub learnts: uint64,
    pub learnts_literals: uint64,
    pub max_literals: uint64,
    pub tot_literals: uint64,
    pub tot_solutions: uint64,
    pub clk: clock_t,
}
#[test]
fn bindgen_test_layout_stats_t() {
    assert_eq!(
        ::std::mem::size_of::<stats_t>(),
        104usize,
        concat!("Size of: ", stringify!(stats_t))
    );
    assert_eq!(
        ::std::mem::align_of::<stats_t>(),
        8usize,
        concat!("Alignment of ", stringify!(stats_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).starts as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(starts)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).decisions as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(decisions)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).propagations as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(propagations)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).inspects as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(inspects)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).conflicts as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(conflicts)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).clauses as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(clauses)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).clauses_literals as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(clauses_literals)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).learnts as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(learnts)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).learnts_literals as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(learnts_literals)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).max_literals as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(max_literals)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).tot_literals as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(tot_literals)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).tot_solutions as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(tot_solutions)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<stats_t>())).clk as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(stats_t),
            "::",
            stringify!(clk)
        )
    );
}
pub type stats = stats_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct clause_t {
    _unused: [u8; 0],
}
pub type clause = clause_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct solver_t {
    pub size: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
    pub qhead: ::std::os::raw::c_int,
    pub qtail: ::std::os::raw::c_int,
    pub lim: ::std::os::raw::c_int,
    pub clauses: vecp,
    pub learnts: vecp,
    pub solutions: vecp,
    pub var_inc: f64,
    pub var_decay: f64,
    pub cla_inc: f32,
    pub cla_decay: f32,
    pub wlists: *mut vecp,
    pub activity: *mut f64,
    pub assigns: *mut lbool,
    pub orderpos: *mut ::std::os::raw::c_int,
    pub reasons: *mut *mut clause,
    pub levels: *mut ::std::os::raw::c_int,
    pub trail: *mut lit,
    pub out: *mut FILE,
    pub sublevels: *mut ::std::os::raw::c_int,
    pub subtrail_lim: veci,
    pub generated_clauses: vecp,
    pub binary: *mut clause,
    pub tags: *mut lbool,
    pub tagged: veci,
    pub stack: veci,
    pub order: veci,
    pub trail_lim: veci,
    pub root_level: ::std::os::raw::c_int,
    pub simpdb_assigns: ::std::os::raw::c_int,
    pub simpdb_props: ::std::os::raw::c_int,
    pub random_seed: f64,
    pub progress_estimate: f64,
    pub verbosity: ::std::os::raw::c_int,
    pub is_k_sols: ::std::os::raw::c_int,
    pub k_sols: ::std::os::raw::c_ulong,
    pub stats: stats,
    pub native_pass_flag: ::std::os::raw::c_int,
    pub native_solution: veci,
    pub assumptions: veci,
}
